// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwrite source input ArrayBuffer 1`] = `
Array [
  ArrayBuffer [],
  ArrayBuffer [],
]
`;

exports[`overwrite source input ArrayBuffer 2`] = `
Array [
  ArrayBuffer [],
  ArrayBuffer [],
]
`;

exports[`overwrite source input Buffer & ArrayBuffer 1`] = `
Array [
  Object {
    "data": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  Array [
    0,
    0,
    0,
    0,
    0,
  ],
  Object {},
  ArrayBuffer [],
]
`;

exports[`overwrite source input Buffer & ArrayBuffer 2`] = `
Array [
  Object {
    "data": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  Array [
    0,
    0,
    0,
    0,
    0,
  ],
  Object {},
  ArrayBuffer [],
]
`;

exports[`overwrite source input Buffer 1`] = `
Array [
  Object {
    "data": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  Array [
    0,
    0,
    0,
    0,
    0,
  ],
  Object {},
]
`;

exports[`overwrite source input Buffer 2`] = `
Array [
  Object {
    "data": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  Array [
    0,
    0,
    0,
    0,
    0,
  ],
  Object {},
]
`;

exports[`overwrite source input Map 1`] = `
Array [
  Map {
    "a" => 1,
    "b" => 2,
    "c" => 3,
  },
  Object {
    "a": 1,
    "b": 2,
    "c": 3,
  },
]
`;

exports[`overwrite source input Map 2`] = `
Array [
  Map {
    "a" => 1,
    "b" => 2,
    "c" => 3,
  },
  Object {
    "a": 1,
    "b": 2,
    "c": 3,
  },
]
`;

exports[`overwrite source input RegExp 1`] = `
Array [
  /1/,
  Object {},
  /1/g,
  /1/i,
]
`;

exports[`overwrite source input RegExp 2`] = `
Array [
  /1/,
  Object {},
  /1/g,
  /1/i,
]
`;

exports[`overwrite source input boolean 1`] = `
Array [
  true,
  false,
]
`;

exports[`overwrite source input boolean 2`] = `
Array [
  true,
  false,
]
`;

exports[`overwrite source input boolean 2 1`] = `
Array [
  true,
  false,
  null,
  0,
  undefined,
  NaN,
  Infinity,
  "",
]
`;

exports[`overwrite source input boolean 2 2`] = `
Array [
  true,
  false,
  null,
  0,
  undefined,
  NaN,
  Infinity,
  "",
]
`;

exports[`overwrite source input function 1`] = `
Array [
  [Function],
  [Function],
  [Function],
]
`;

exports[`overwrite source input function 2`] = `
Array [
  [Function],
  [Function],
  [Function],
]
`;

exports[`overwrite source input function 2 1`] = `
Array [
  [Function],
  [Function],
  [Function],
  Object {},
]
`;

exports[`overwrite source input function 2 2`] = `
Array [
  [Function],
  [Function],
  [Function],
  Object {},
]
`;

exports[`overwrite source input main mixin test 1`] = `
Array [
  1,
  0,
  true,
  undefined,
  null,
  false,
  Array [
    "a",
    "b",
    "c",
  ],
  Array [
    "a",
    "c",
    "b",
  ],
  Object {
    "a": Object {
      "b": 2,
    },
  },
  Object {
    "a": Object {
      "b": 3,
    },
  },
  Object {
    "a": Object {
      "b": undefined,
    },
  },
  Object {
    "a": Object {},
  },
  Object {
    "a": Object {
      "b": 3,
      "c": undefined,
    },
  },
  /1/,
  Object {},
  /1/g,
  /1/i,
  "1",
  "0",
  "true",
  "undefined",
  "null",
  "false",
  "",
  NaN,
  Infinity,
  [Function],
  [Function],
  [Function],
]
`;

exports[`overwrite source input main mixin test 2`] = `
Array [
  1,
  0,
  true,
  undefined,
  null,
  false,
  Array [
    "a",
    "b",
    "c",
  ],
  Array [
    "a",
    "c",
    "b",
  ],
  Object {
    "a": Object {
      "b": 2,
    },
  },
  Object {
    "a": Object {
      "b": 3,
    },
  },
  Object {
    "a": Object {
      "b": undefined,
    },
  },
  Object {
    "a": Object {},
  },
  Object {
    "a": Object {
      "b": 3,
      "c": undefined,
    },
  },
  /1/,
  Object {},
  /1/g,
  /1/i,
  "1",
  "0",
  "true",
  "undefined",
  "null",
  "false",
  "",
  NaN,
  Infinity,
  [Function],
  [Function],
  [Function],
]
`;

exports[`overwrite source input number 1`] = `
Array [
  1,
  2,
  3,
  0,
]
`;

exports[`overwrite source input number 2`] = `
Array [
  1,
  2,
  3,
  0,
]
`;

exports[`overwrite source input number 2 1`] = `
Array [
  1,
  2,
  3,
  0,
  NaN,
  Infinity,
]
`;

exports[`overwrite source input number 2 2`] = `
Array [
  1,
  2,
  3,
  0,
  NaN,
  Infinity,
]
`;

exports[`overwrite source input object 1`] = `
Array [
  Object {
    "a": Object {
      "b": 2,
    },
  },
  Object {
    "a": Object {
      "b": 3,
    },
  },
]
`;

exports[`overwrite source input object 2`] = `
Array [
  Object {
    "a": Object {
      "b": 2,
    },
  },
  Object {
    "a": Object {
      "b": 3,
    },
  },
]
`;

exports[`overwrite source input string 1`] = `
Array [
  "1",
  "2",
  "3",
  "0",
  "",
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`overwrite source input string 2`] = `
Array [
  "1",
  "2",
  "3",
  "0",
  "",
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`overwrite source input string[] 1`] = `
Array [
  Array [
    "a",
    "b",
    "c",
  ],
]
`;

exports[`overwrite source input string[] 2`] = `
Array [
  Array [
    "a",
    "b",
    "c",
  ],
]
`;
